# Nucleo-F446RE-default

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32F446RETx_FLASH.ld  default_project.ioc
CMake/: arm-gcc-toolchain.cmake
Core/Src/: main.c
